# vimbinary

./: README.md  pyproject.toml
examples/: example_perturbation.ipynb  example_starting.ipynb
examples/.ipynb_checkpoints/: example_perturbation-checkpoint.ipynb
simbinary/: simgaia.py
vimbinary/: __init__.py  fitgaia.py  simgaia.py
